[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.7.0"
authors = [
    "Christopher König <me@kurabloodlust.eu>",
    "Alex Kocharin <alex@kocharin.ru>"
]
homepage = "https://github.com/z0ne-dev/markdown-that"
repository = "https://github.com/z0ne-dev/markdown-that"
readme = "README.md"
license = "MIT"
edition = "2024"