[workspace]
members = ["crates/*", "patches/*"]
resolver = "3"

[workspace.package]
version = "0.7.1"
authors = [
    "Christopher König <me@kurabloodlust.eu>",
    "Alex Kocharin <alex@kocharin.ru>"
]
homepage = "https://github.com/z0ne-dev/markdown-that"
repository = "https://github.com/z0ne-dev/markdown-that"
readme = "README.md"
license = "MIT"
edition = "2024"

[patch.crates-io]
yaml-rust = { version = "0.4.5", path = "patches/yaml-rust-wrapper" }
