[package]
name = "markdown-that"
description = "Rust port of popular markdown-it.js library."
documentation = "https://docs.rs/markdown-that"
categories = ["text-processing", "parsing"]
keywords = ["markdown", "commonmark"]
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
const_format = "0.2.34"
downcast-rs = "2.0.1"
educe = "0.6.0"
entities = "1.0.1"
html-escape = "0.2.13"
linkify = { version = "0.10.0", optional = true }
markdown-that-url = { path = "../markdown-that-url" }
readonly = "0.2.13"
regex = "1.11.1"
stacker = "0.1.21"
syntect = { version = ">= 5.0.0, < 6", optional = true, default-features = false, features = ["default-fancy"] }
unicode-general-category = "1.0.0"

[features]
default = ["linkify", "syntect"]
